{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "ce6f7cc3-bccf-42a6-bafb-181e8358e538",
            "actions": [
                {
                    "name": "Jump",
                    "id": "31b3be71-2f3d-41e9-9c24-ba2fbc886b7b",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Crouch",
                    "id": "e634bfff-77ca-4d54-ac15-3bf11db23ad8",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Attack",
                    "id": "ba066bfd-bdc7-47a0-ab8c-443785b44b2d",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Skill",
                    "id": "f3be5946-da7b-4c39-b3f7-3c69ed7a3104",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "Dodge",
                    "id": "e2d6fb16-1f83-49d8-83fd-37bae6c0900a",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "JumpD",
                    "id": "51c5feb8-2d04-4ad1-ab06-1c5f80dba8fa",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "CrouchD",
                    "id": "e1af1d3d-6cbe-45fc-8624-18ccdb94fd12",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "AttackD",
                    "id": "47f3446f-7c8a-4c8d-989b-12a565af5059",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                },
                {
                    "name": "SkillD",
                    "id": "3a70eb79-a3cd-49fb-9113-345254c9f1fa",
                    "expectedControlLayout": "",
                    "continuous": false,
                    "passThrough": false,
                    "processors": "",
                    "interactions": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JumpD",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/semicolon",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CrouchD",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackD",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillD",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": []
}